feat: implement production-ready payment module with Docker setup
- Add complete payment module with models, routes, services, and migrations
- Implement concurrency-safe payment processing with row-level locks
- Add ledger transaction support with idempotency
- Refactor migration system to use backend/database/migrations
- Update Docker Compose with migration services and profiles
- Add Makefile for easy Docker commands
- Add comprehensive Docker documentation
- Update frontend API client with payment endpoints
- All services run in Docker with proper health checks and dependencies

Payment Module Features:
- SQL-level filtering and pagination for GET /api/payments
- 2-phase payment simulation with stalled recovery
- BIGINT support for large payment amounts
- JSONB metadata merging
- Access control for non-admin users
- Transaction-safe ledger entries

Docker Features:
- Development and production environments
- Migration service with profiles
- Health checks and proper dependencies
- Hot reload for development
- Comprehensive documentation

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --passWithNoTests",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.js",
-    "migrate": "node src/utils/migrate.js"
+    "migrate": "node src/utils/migrate.js",
+    "migrate:status": "node src/utils/migrate.js --status"
   },
   "keywords": ["careconnect", "healthcare", "backend"],
   "author": "Careconnect Team",
