--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,33 @@ services:
       - careconnect-network
 
   # ==========================================================================
+  # Database Migration Service
+  # ==========================================================================
+  migrate:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: careconnect-backend
+    container_name: careconnect-migrate
+    environment:
+      NODE_ENV: development
+      DATABASE_HOST: postgres
+      DATABASE_PORT: 5432
+      DATABASE_NAME: careconnect
+      DATABASE_USER: careconnect
+      DATABASE_PASSWORD: careconnect_dev_password
+    volumes:
+      - ./backend:/app
+      - backend_node_modules:/app/node_modules
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - careconnect-network
+    command: npm run migrate
+    profiles: ["migrate"]
+
+  # ==========================================================================
   # Backend API
   # ==========================================================================
   backend:
