feat: privacy, notifications, validation, trust levels, and UI improvements
Privacy & Security:
- Auto-create profile with display_name on registration (no more exposed email/phone)
- Remove email/phoneNumber from JWT payload
- Add ensureProfileExists + buildSafeUserResponse on login/me endpoints
- Add RequireProfile guard - redirect to /profile if display_name missing
- Mask email/phone in TopBar dropdown
- Replace email with display_name in chat and dispute pages

Notifications:
- Add Notification model, service, controller, and routes
- Trigger notifications on job accepted, check-in, check-out
- Real-time unread count polling in TopBar
- NotificationsPage connected to real backend API

Backend:
- Add request validation (Joi schemas) for all routes
- Add rate limiting middleware
- Add trust level system (L0-L3) with auto-set min_trust_level
- Add database migration system and scripts
- Add integration tests (auth, jobs, wallet, disputes)
- Improve error handling with structured ApiError
- Add trust level worker for auto-promotion

Frontend:
- Add ErrorBoundary component
- Add Google Maps picker (showMap) to ProfilePage hirer address
- Improve job card layout (contextual action buttons)
- Add vitest config and frontend unit tests
- ProfilePage: banner when redirected, auto-redirect after save

Infrastructure:
- Add docker-compose.test.yml for test environment
- Update docker-compose.yml configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
     "dev": "nodemon src/server.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --passWithNoTests",
     "test:watch": "jest --watch",
+    "test:integration": "jest tests/integration --verbose",
+    "test:smoke": "jest tests/integration --testNamePattern='Tier-0' --verbose",
     "lint": "eslint src/**/*.js",
-    "migrate": "node src/utils/migrate.js",
-    "migrate:status": "node src/utils/migrate.js --status"
+    "migrate": "node scripts/migrate.js migrate",
+    "migrate:status": "node scripts/migrate.js status",
+    "migrate:bootstrap": "node scripts/migrate.js bootstrap"
   },
   "keywords": ["careconnect", "healthcare", "backend"],
   "author": "Careconnect Team",
