--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,33 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest --passWithNoTests",
-    "test:ui": "vitest --ui --passWithNoTests"
+    "test:ui": "vitest --ui --passWithNoTests",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:logic": "vitest run src/__tests__/routerGuards.test.tsx src/__tests__/AuthContext.test.tsx src/__tests__/api.interceptor.test.ts"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "socket.io-client": "^4.6.1",
-    "zustand": "^4.4.7",
     "axios": "^1.6.5",
+    "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "clsx": "^2.1.0",
-    "react-hot-toast": "^2.4.1",
     "lucide-react": "^0.303.0",
-    "zod": "^3.22.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.6.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/leaflet": "^1.9.8",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react": "^4.2.1",
@@ -37,7 +43,6 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "@testing-library/react": "^14.1.2",
     "jsdom": "^23.0.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
