--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,21 @@ JWT_REFRESH_EXPIRES_IN=30d
 UPLOAD_DIR=/app/uploads
 MAX_FILE_SIZE_MB=10
 
+# Rate Limiting
+RATE_LIMIT_AUTH_WINDOW_MS=900000
+RATE_LIMIT_AUTH_MAX=5
+RATE_LIMIT_OTP_WINDOW_MS=900000
+RATE_LIMIT_OTP_MAX=3
+RATE_LIMIT_WEBHOOK_WINDOW_MS=60000
+RATE_LIMIT_WEBHOOK_MAX=10
+RATE_LIMIT_UPLOAD_WINDOW_MS=3600000
+RATE_LIMIT_UPLOAD_MAX=20
+RATE_LIMIT_DEFAULT_WINDOW_MS=900000
+RATE_LIMIT_DEFAULT_MAX=100
+
+# Webhook Security (Optional)
+WEBHOOK_ALLOWED_IPS=127.0.0.1,::1
+
 # Timezone
 TZ=Asia/Bangkok
 
