fix: top-up เข้าผิด wallet + WebSocket ผ่าน tunnel ไม่ได้
แก้ 2 ปัญหาหลัก:

1. top-up เงินเข้า caregiver wallet แทน hirer wallet
   - สาเหตุ: processTopupSuccess JOIN wallets ด้วย IN ('hirer','caregiver')
     ทำให้เลือก wallet แบบสุ่มเมื่อ user มีทั้ง 2 wallets
   - แก้: JOIN users เพื่อดู role แล้วเลือก wallet_type ตาม role จริง
   - แก้ข้อมูลเก่าใน DB: ย้าย 5000 บาทจาก caregiver กลับ hirer wallet
     ด้วย reversal + corrective credit transactions (immutable ledger)

2. Vite HMR WebSocket ใช้ ws://localhost ผ่าน Cloudflare tunnel ไม่ได้
   - สาเหตุ: docker-compose ตั้ง VITE_PUBLIC_HOST=localhost
   - แก้: ตั้ง default เป็น careconnect.kmitl.site + wss + port 443
   - vite.config.ts: ข้าม HMR override เมื่อ host เป็น localhost
     ตั้ง allowedHosts: true เพื่อรองรับ tunnel domains

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,7 +179,10 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: development
-      VITE_PUBLIC_HOST: localhost
+      # External/tunnel access for Vite HMR (override via shell/.env if needed)
+      VITE_PUBLIC_HOST: ${VITE_PUBLIC_HOST:-careconnect.kmitl.site}
+      VITE_PUBLIC_PROTOCOL: ${VITE_PUBLIC_PROTOCOL:-wss}
+      VITE_PUBLIC_PORT: ${VITE_PUBLIC_PORT:-443}
     ports:
       - "5173:5173"
     volumes:
