--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,10 +179,12 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: development
-      # External/tunnel access for Vite HMR (override via shell/.env if needed)
-      VITE_PUBLIC_HOST: ${VITE_PUBLIC_HOST:-careconnect.kmitl.site}
-      VITE_PUBLIC_PROTOCOL: ${VITE_PUBLIC_PROTOCOL:-wss}
-      VITE_PUBLIC_PORT: ${VITE_PUBLIC_PORT:-443}
+      # External/tunnel access for Vite HMR (opt-in via shell/.env only)
+      VITE_PUBLIC_HOST: ${VITE_PUBLIC_HOST:-}
+      VITE_PUBLIC_PROTOCOL: ${VITE_PUBLIC_PROTOCOL:-}
+      VITE_PUBLIC_PORT: ${VITE_PUBLIC_PORT:-}
+      # Polling file watcher is opt-in to avoid hot-reload loops on some machines
+      VITE_USE_POLLING: ${VITE_USE_POLLING:-false}
     ports:
       - "5173:5173"
     volumes:
