--- a/backend/package.json
+++ b/backend/package.json
@@ -16,39 +16,44 @@
     "migrate:status": "node scripts/migrate.js status",
     "migrate:bootstrap": "node scripts/migrate.js bootstrap"
   },
-  "keywords": ["careconnect", "healthcare", "backend"],
+  "keywords": [
+    "careconnect",
+    "healthcare",
+    "backend"
+  ],
   "author": "Careconnect Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.1",
-    "pg": "^8.11.3",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
-    "date-fns": "^3.0.6",
     "axios": "^1.6.5",
-    "joi": "^17.11.0",
-    "morgan": "^1.10.0",
-    "winston": "^3.11.0",
-    "nodemailer": "^6.9.7",
-    "twilio": "^4.20.0",
-    "sharp": "^0.33.1",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
+    "dotenv": "^16.3.1",
     "exif-parser": "^0.1.12",
-    "node-cron": "^3.0.3"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "google-auth-library": "^9.15.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "sharp": "^0.33.1",
+    "socket.io": "^4.6.1",
+    "twilio": "^4.20.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=20.0.0",
