--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,7 +12,7 @@ services:
       - backend_uploads:/app/uploads
     environment:
       - NODE_ENV=development
-    command: npm run dev
+    command: sh -c "npm install --prefer-offline --no-audit && npm run dev"
 
   # Override frontend for development  
   frontend:
