feat: OTP resend cooldown, cancel unverified account, remove email dev mode
- backend: add 1-min resend cooldown in otpService.js
- backend: add DELETE /api/auth/me + POST /api/auth/cancel-registration
  to delete unverified guest accounts
- backend: allow _token query param in auth middleware for sendBeacon
- backend: add SMTP email support via nodemailer
- frontend: add countdown timer for OTP resend (GuestRegisterPage, ProfilePage)
- frontend: remove email OTP dev mode debug display
- frontend: cancel unverified account on Back, unmount, and browser close
  using visibilitychange + sendBeacon
- docker-compose: pass SMTP env vars from host .env to backend container

--- a/.env.example
+++ b/.env.example
@@ -79,10 +79,14 @@ BANK_TRANSFER_PROVIDER=mock
 # Email
 EMAIL_PROVIDER=mock
 EMAIL_FROM=noreply@careconnect.local
-# For production:
-# EMAIL_PROVIDER=sendgrid or resend
-# SENDGRID_API_KEY=your_key_here
-# RESEND_API_KEY=your_key_here
+# For real email via SMTP (Gmail, Outlook, Zoho, etc.):
+# EMAIL_PROVIDER=smtp
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your_gmail@gmail.com
+# SMTP_PASS=your_app_password_here
+# EMAIL_FROM=CareConnect <your_gmail@gmail.com>
 
 # Push Notifications
 PUSH_PROVIDER=mock
