feat: add SMSOK SMS provider for phone OTP
- otpService.js: support SMS_PROVIDER=smsok using BasicAuth
- docker-compose.yml: pass SMSOK_API_URL/KEY/SECRET/SENDER from .env
- .env.example: document SMSOK configuration

--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,11 @@ PAYMENT_PROVIDER=mock
 
 # SMS OTP
 SMS_PROVIDER=mock
-# For production: SMS_PROVIDER=twilio or thaibulksms
+# For SMSOK: SMS_PROVIDER=smsok
+# SMSOK_API_URL=https://smsok.co/api/v1/s
+# SMSOK_API_KEY=your_username_here
+# SMSOK_API_SECRET=your_password_here
+# SMSOK_SENDER=YourBrand
 
 # KYC
 KYC_PROVIDER=mock
