fix(auth): Google OAuth redirect localhost issue in production
- แก้ getBaseUrl + getFrontendBaseUrl ใช้ BACKEND_URL/FRONTEND_URL ใน production ก่อน fallback
- แก้ forgotPassword ใช้ getFrontendBaseUrl แทน hardcode localhost
- เพิ่ม BACKEND_URL env var ใน docker-compose.prod.yml + SYSTEM.md
- ป้องกัน Google OAuth redirect ไป localhost เมื่อเข้าจาก domain name ภายนอก

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -78,6 +78,7 @@ services:
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET:-}
       GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL:-}
       FRONTEND_URL: ${FRONTEND_URL:-}
+      BACKEND_URL: ${BACKEND_URL:-}
     volumes:
       - backend_uploads:/app/uploads
     depends_on:
