--- a/.env.prod.example
+++ b/.env.prod.example
@@ -13,3 +13,14 @@ HTTP_PORT=80
 
 # Set to your domain in production (e.g. https://careconnect.example.com)
 CORS_ORIGIN=*
+
+# Google OAuth (required for Google login)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CALLBACK_URL=https://careconnect.kmitl.site/api/auth/google/callback
+FRONTEND_URL=https://careconnect.kmitl.site
+BACKEND_URL=https://careconnect.kmitl.site
+
+# Admin account (required)
+ADMIN_EMAIL=admin@careconnect.kmitl.site
+ADMIN_PASSWORD=change_me_strong
